[workspace]
members = [ "tests"
          , "contracts/perun-channel-lockscript"
          , "contracts/perun-channel-typescript"
          , "contracts/perun-funds-lockscript"
          , "contracts/perun-common"
          ]

[profile.release]
overflow-checks = true
opt-level = 's'
lto = false
codegen-units = 1
panic = 'abort'
