[workspace]
members = [ "contracts/perun-channel-lockscript"
          , "contracts/perun-channel-typescript"
          , "contracts/perun-funds-lockscript"
          , "contracts/perun-common"
          ]
exclude = ["tests"]

[profile.release]
overflow-checks = true
opt-level = 's'
lto = false
codegen-units = 1
panic = 'abort'
