[package]
name = "perun-channel-typescript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.10.0"
perun-common = { path = "../perun-common", default-features = false, features = ["no_std"] }
