[package]
name = "perun-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
ckb-std = "0.10.0"
ckb-types = { package = "ckb-standalone-types", version = "0.1.2", default-features = false }

[dependencies.molecule]
version = "0.7.3"
default-features = false
