[package]
name = "perun-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.10.0"
blake2b-rs = "0.2.0"
ckb-standalone-types = { version = "0.1.2", default-features = false, optional = true }
ckb-types = { version = "=0.108.0", optional = true }
k256 = { version = "0.11.6", default-features = false, features = ["ecdsa", "keccak256", "arithmetic"]}
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
buddy-alloc = { version = "0.4.2", optional = true }
ckb-occupied-capacity = { version = "0.108.0", optional = true }

[dependencies.molecule]
version = "0.7.3"
default-features = false

[features]
default = ["contract"]
testing = ["std", "ckb-types", "ckb-occupied-capacity"]
std = []
contract = ["ckb-standalone-types"]
